<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </ImageView>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/shopping_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_marginLeft="16dp"
        android:layout_width="74dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/cart"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="312dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/items_in_cart"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="116dp"
            android:layout_height="118dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="203dp"
            android:layout_height="43dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/merriweather_light"
            android:text="@string/sausage_pizza"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="67dp"
            android:layout_height="49dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/_5_8"
            android:textColor="@color/orange"
            android:textColorHighlight="@color/orange"
            android:textColorHint="@color/orange"
            android:textColorLink="@color/orange"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
             />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="93dp"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/merriweather_light"
            android:text="@string/_1_packet"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="374dp"
        android:layout_height="263dp"
        android:layout_margin="32dp"
        android:layout_marginTop="76dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_goneMarginTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="327dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView12"

                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="start"
                android:text="@string/recipet"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:foregroundTint="@color/white"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView7"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="start"
                    android:text="@string/subtotal"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="end"
                    android:text="@string/_5_8"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:foregroundTint="@color/white"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="start"
                    android:text="@string/discount"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="end"
                    android:text="@string/_0_0"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:foregroundTint="@color/white"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView18"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="start"
                    android:text="@string/delivery"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="end"
                    android:text="@string/_0_0"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:foregroundTint="@color/white"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView23"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-black"
                    android:gravity="start"
                    android:text="@string/total_amount"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:gravity="end"
                    android:text="@string/_0_0"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView" />


            </LinearLayout>
        </LinearLayout>


        <!-- Content of your card goes here -->
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="217dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="sans-serif-medium"
        android:text="@string/confirm_order"
        android:layout_marginBottom="32dp"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>